[gd_scene load_steps=20 format=3 uid="uid://brim8djdfjrb1"]

[ext_resource type="Texture2D" uid="uid://kguyyclwwk4o" path="res://assets/sprites/ShopKeeper.png" id="1_8qkia"]
[ext_resource type="Script" path="res://scripts/shop_keeper.gd" id="1_nnbq1"]
[ext_resource type="FontFile" uid="uid://k6go1cdoy2dc" path="res://assets/fonts/Fonts/Kenney Mini.ttf" id="3_7tytn"]
[ext_resource type="Texture2D" uid="uid://csv877y18vjvw" path="res://assets/sprites/plusButton.png" id="5_f854e"]
[ext_resource type="Texture2D" uid="uid://bqlqdc566u42v" path="res://assets/sprites/Egg.png" id="7_ciouc"]
[ext_resource type="Texture2D" uid="uid://c3quu4lxdvdte" path="res://assets/sprites/plusButtonPressed.png" id="7_js452"]
[ext_resource type="FontFile" uid="uid://ce33c3yvuo3tf" path="res://assets/fonts/Fonts/m3x6.ttf" id="8_gql2c"]
[ext_resource type="Texture2D" uid="uid://bb8a41a6p0qul" path="res://assets/sprites/DamageGem.png" id="8_swhhw"]
[ext_resource type="Texture2D" uid="uid://b6dwjsy3nlot7" path="res://assets/sprites/plusButtonHovered.png" id="8_xx1av"]
[ext_resource type="Texture2D" uid="uid://cob1sjitxlxxa" path="res://assets/sprites/HealthFlask.png" id="10_0sb20"]
[ext_resource type="Texture2D" uid="uid://td76ndi8gsnf" path="res://assets/sprites/ExtraJump.png" id="11_1ljqx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_se56m"]
atlas = ExtResource("1_8qkia")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kabkx"]
atlas = ExtResource("1_8qkia")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8qns"]
atlas = ExtResource("1_8qkia")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8denm"]
atlas = ExtResource("1_8qkia")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr0w1"]
atlas = ExtResource("1_8qkia")
region = Rect2(0, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yjtos"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_se56m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kabkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8qns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8denm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se56m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kabkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8qns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8denm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr0w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se56m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kabkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8qns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8denm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se56m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kabkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8qns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8denm")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1meke"]
size = Vector2(26, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_u32mi"]
radius = 4.00813

[node name="ShopKeeper" type="Node2D"]
script = ExtResource("1_nnbq1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yjtos")
autoplay = "default"
frame_progress = 0.327611

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-5, -5)
shape = SubResource("RectangleShape2D_1meke")

[node name="ShopUI" type="Control" parent="."]
visible = false
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = -43.0
offset_right = 48.0
offset_bottom = 9.0
scale = Vector2(1.00583, 1)
mouse_filter = 2

[node name="Label" type="Label" parent="ShopUI"]
layout_mode = 0
offset_left = -81.5249
offset_top = 2.0
offset_right = 0.475136
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("3_7tytn")
text = "Got eggs?"

[node name="ColorRect" type="ColorRect" parent="ShopUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 52.0
scale = Vector2(0.997474, 0.674411)
mouse_filter = 2
color = Color(0.122252, 0.122252, 0.122252, 1)

[node name="ColorRect2" type="ColorRect" parent="ShopUI"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 39.0
offset_bottom = 34.0
scale = Vector2(0.999482, 0.999899)
mouse_filter = 2
color = Color(0.252028, 0.252028, 0.252028, 1)

[node name="AddButton" type="TextureButton" parent="ShopUI"]
layout_mode = 0
offset_left = 1.98841
offset_top = 2.0
offset_right = 10.9884
offset_bottom = 11.0
texture_normal = ExtResource("5_f854e")
texture_pressed = ExtResource("7_js452")
texture_hover = ExtResource("8_xx1av")

[node name="EggCostIndicator" type="Label" parent="ShopUI/AddButton"]
layout_mode = 0
offset_left = 10.9363
offset_top = -4.0
offset_right = 20.9363
offset_bottom = 9.0
theme_override_fonts/font = ExtResource("8_gql2c")
text = "30"
horizontal_alignment = 2

[node name="EggLogo" type="Sprite2D" parent="ShopUI/AddButton"]
position = Vector2(23.8609, 4)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_ciouc")

[node name="Item1" type="Sprite2D" parent="ShopUI/AddButton"]
position = Vector2(31.8146, 4)
texture = ExtResource("8_swhhw")

[node name="Item1Hover" type="Area2D" parent="ShopUI/AddButton/Item1"]
z_index = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopUI/AddButton/Item1/Item1Hover"]
position = Vector2(0, -0.5)
shape = SubResource("CircleShape2D_u32mi")

[node name="Tooltip1Background" type="ColorRect" parent="ShopUI/AddButton/Item1"]
visible = false
offset_left = 6.0
offset_top = -6.0
offset_right = 48.0
offset_bottom = 6.0
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="TooltipBackground" type="ColorRect" parent="ShopUI/AddButton/Item1/Tooltip1Background"]
layout_mode = 0
offset_left = 0.959438
offset_top = 1.0
offset_right = 40.9594
offset_bottom = 11.0
color = Color(0.25098, 0.25098, 0.25098, 1)

[node name="Item1Tooltip" type="Label" parent="ShopUI/AddButton/Item1/Tooltip1Background/TooltipBackground"]
layout_mode = 0
offset_left = 0.953643
offset_top = -4.0
offset_right = 39.9536
offset_bottom = 9.0
theme_override_fonts/font = ExtResource("8_gql2c")
text = "Damage +1"

[node name="AddButton2" type="TextureButton" parent="ShopUI"]
layout_mode = 0
offset_left = 1.98841
offset_top = 13.0
offset_right = 10.9884
offset_bottom = 22.0
texture_normal = ExtResource("5_f854e")
texture_pressed = ExtResource("7_js452")
texture_hover = ExtResource("8_xx1av")

[node name="Item2" type="Sprite2D" parent="ShopUI/AddButton2"]
position = Vector2(31.8146, 4)
texture = ExtResource("10_0sb20")

[node name="Item2Hover" type="Area2D" parent="ShopUI/AddButton2/Item2"]
z_index = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopUI/AddButton2/Item2/Item2Hover"]
position = Vector2(0, -0.5)
shape = SubResource("CircleShape2D_u32mi")

[node name="Tooltip2Background" type="ColorRect" parent="ShopUI/AddButton2/Item2"]
visible = false
offset_left = 6.0
offset_top = -6.0
offset_right = 50.0
offset_bottom = 6.0
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="TooltipBackground" type="ColorRect" parent="ShopUI/AddButton2/Item2/Tooltip2Background"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 43.0
offset_bottom = 11.0
color = Color(0.25098, 0.25098, 0.25098, 1)

[node name="Item2Tooltip" type="Label" parent="ShopUI/AddButton2/Item2/Tooltip2Background/TooltipBackground"]
layout_mode = 0
offset_left = 0.953643
offset_top = -4.0
offset_right = 39.9536
offset_bottom = 9.0
theme_override_fonts/font = ExtResource("8_gql2c")
text = "Restore HP"

[node name="EggCostIndicator2" type="Label" parent="ShopUI/AddButton2"]
layout_mode = 0
offset_left = 10.9363
offset_top = -4.0
offset_right = 20.9363
offset_bottom = 9.0
theme_override_fonts/font = ExtResource("8_gql2c")
text = "20"
horizontal_alignment = 2

[node name="EggLogo" type="Sprite2D" parent="ShopUI/AddButton2"]
position = Vector2(23.8609, 4)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_ciouc")

[node name="AddButton3" type="TextureButton" parent="ShopUI"]
layout_mode = 0
offset_left = 1.98841
offset_top = 24.0
offset_right = 10.9884
offset_bottom = 33.0
texture_normal = ExtResource("5_f854e")
texture_pressed = ExtResource("7_js452")
texture_hover = ExtResource("8_xx1av")

[node name="Item3" type="Sprite2D" parent="ShopUI/AddButton3"]
position = Vector2(31.8146, 5)
texture = ExtResource("11_1ljqx")

[node name="Item3Hover" type="Area2D" parent="ShopUI/AddButton3/Item3"]
z_index = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopUI/AddButton3/Item3/Item3Hover"]
position = Vector2(0, -0.5)
shape = SubResource("CircleShape2D_u32mi")

[node name="Tooltip3Background" type="ColorRect" parent="ShopUI/AddButton3/Item3"]
visible = false
offset_left = 6.0
offset_top = -6.0
offset_right = 40.0
offset_bottom = 6.0
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="TooltipBackground" type="ColorRect" parent="ShopUI/AddButton3/Item3/Tooltip3Background"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 33.0
offset_bottom = 11.0
color = Color(0.25098, 0.25098, 0.25098, 1)

[node name="Item3Tooltip" type="Label" parent="ShopUI/AddButton3/Item3/Tooltip3Background/TooltipBackground"]
layout_mode = 0
offset_left = 0.953643
offset_top = -4.0
offset_right = 39.9536
offset_bottom = 9.0
theme_override_fonts/font = ExtResource("8_gql2c")
text = "+1 Jump"

[node name="EggCostIndicator3" type="Label" parent="ShopUI/AddButton3"]
layout_mode = 0
offset_left = 9.94206
offset_top = -4.0
offset_right = 19.9421
offset_bottom = 9.0
theme_override_fonts/font = ExtResource("8_gql2c")
text = "50"
horizontal_alignment = 2

[node name="EggLogo" type="Sprite2D" parent="ShopUI/AddButton3"]
position = Vector2(23.8609, 4)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_ciouc")

[node name="press E to shop" type="Label" parent="."]
visible = false
z_index = 6
offset_left = -19.0
offset_top = -23.0
offset_right = 13.0
offset_bottom = -9.0
theme_override_fonts/font = ExtResource("8_gql2c")
text = "shop: E"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="ShopUI/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="mouse_entered" from="ShopUI/AddButton/Item1/Item1Hover" to="." method="_on_item_1_hover_mouse_entered"]
[connection signal="mouse_exited" from="ShopUI/AddButton/Item1/Item1Hover" to="." method="_on_item_1_hover_mouse_exited"]
[connection signal="pressed" from="ShopUI/AddButton2" to="." method="_on_add_button_2_pressed"]
[connection signal="mouse_entered" from="ShopUI/AddButton2/Item2/Item2Hover" to="." method="_on_item_2_hover_mouse_entered"]
[connection signal="mouse_exited" from="ShopUI/AddButton2/Item2/Item2Hover" to="." method="_on_item_2_hover_mouse_exited"]
[connection signal="pressed" from="ShopUI/AddButton3" to="." method="_on_add_button_3_pressed"]
[connection signal="mouse_entered" from="ShopUI/AddButton3/Item3/Item3Hover" to="." method="_on_item_3_hover_mouse_entered"]
[connection signal="mouse_exited" from="ShopUI/AddButton3/Item3/Item3Hover" to="." method="_on_item_3_hover_mouse_exited"]
